# QT_Calculator-

./: CMakeLists.txt  README.md  main.cpp
